* use of factory methods and autoboxing [SKIF-705]